# robot_calibration

./: CMakeLists.txt  package.xml
matlab/calibration_common/: calibOut.m  camera2Image.m  dh2mat44.m  mat332quat.m  mat332rpy.m  pinhole.m  project_point.m  quat2mat33.m  rot2.m
msg/: CalibrationMarker.msg
scripts/: create_calibration_pkg.py
src/: calibration_marker_detector.cpp  data_collector.cpp
