<?xml version="1.0"?>
<package>
  <name>robot_calibration</name>
  <version>0.1.0</version>
  <description>The robot_calibration package</description>

  <maintainer email="konradb3@gmail.com">Konrad Banachowicz</maintainer>
  <license>BSD</license>

  <author email="konradb3@gmail.com">Konrad Banachwicz</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>kdl_parser</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>kdl_parser</run_depend>
  
  <export>
  </export>
</package>
